--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -9,36 +9,50 @@ published: false
 # DenoでLinuxコマンドを作ろう
 
 ## はじめに
-- この記事で学べること
-  Linuxコマンドでの、キャッチアップの仕方
-  Denoの初歩的な書き方
-- 対象読者と前提知識
-  環境構築を程々にTypeScriptをちょっと書いてみたい方
-- Denoを選ぶ理由
-  TypeScriptの実行が早かったため
-  Denoが気になったため
+**はじめまして**<br>
+  れなっちと申します。<br>
+  Web系エンジニア歴2年目で、現在はクライアントサイドを中心にTypeScript系を使った開発をしています。<br>
+  好きなもの：アニメ・ねこ・ディズニー<br>
+**この記事で学べること**<br>
+  Linuxコマンドでの、キャッチアップの仕方<br>
+  Denoの初歩的な書き方<br>
+**対象読者と前提知識**<br>
+  Denoを触ってみたい人<br>
+  環境構築を程々にTypeScriptをちょっと書いてみたい方<br>
+  TypeScriptのキャッチアップしたい人<br>
 
-## 第1章: Denoの基礎とファーストステップ（約5000字）
+## 第1章: Denoの基礎
 
 ### 1.1 Denoとは - Node.jsとの違いを理解する
-- Denoの特徴とメリット
-- セキュリティモデルの違い
-- TypeScript標準サポートの恩恵
+- **Denoの特徴とメリット**<br>
+  Denoのpermissions
+    Denoは、明示的に権限を与えない限り実行することができません。今回の実装内容は、かなり強力なものです。ファイル作成や内容の上書きをDenoにさせるためには、コマンドの意味を理解して権限を与えることができる人しか実行できません。これは、さまざまな事故を未然に防ぐ役割があります。
+- **TypeScript標準サポートの恩恵**<br>
+  コンパイルをしなくてもいい<br>
+
 
 ### 1.2 開発環境のセットアップ
 - Denoのインストール
+ 公式URLを参考に行ってください
 - VS Code設定とおすすめ拡張機能
+
 - 基本的な実行方法
+  実行のためのコマンド
+  ```javaScript
+  ```
 
 ### 1.3 catコマンドの作成
 - 最初のコマンド作成
+  まず、最初のコマンドとして、catコマンドを作成してみましょう！<br>
+  Unix cat：https://docs.deno.com/examples/unix_cat/ を検索してください。<br>
+  ブラウザに書いてるコードをコピーしてください。<br>
+  お好きなコードエディタで開いたDenoのリポジトリに`cat.ts`を
 - コマンドライン引数の処理
 - 権限システムの理解
-- shebangとexecutableファイル化
 
-## 第2章: 実用的なLinuxコマンドの実装（約7000字）
+## 第2章: Linuxコマンドの実装
 
-### 2.1 ファイル操作コマンド `mycat` の実装
+### 2.1 ファイル操作コマンド `touch` の実装
 - ファイル読み込み処理
 - ストリーム処理の実装
 - エラーハンドリング
