--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -25,16 +25,18 @@ published: false
 
 ### 1.1 Denoとは - Node.jsとの違いを理解する
 - **Denoの特徴とメリット**<br>
-  Denoのpermissions
-    Denoは、明示的に権限を与えない限り実行することができません。今回の実装内容は、かなり強力なものです。ファイル作成や内容の上書きをDenoにさせるためには、コマンドの意味を理解して権限を与えることができる人しか実行できません。これは、さまざまな事故を未然に防ぐ役割があります。
-- **TypeScript標準サポートの恩恵**<br>
-  コンパイルをしなくてもいい<br>
+  - TypeScript標準サポート<br>
+    コンパイルをしなくてもTypeScriptが実行できます。設定や追加の手順は、一切不要なので、とっても簡単に扱うことができます。<br>
+  - Denoのpermissions<br>
+    Denoは、明示的に権限を与えない限り実行することができません。今回の実装内容は、かなり強力なものです。ファイル作成や内容の上書きをDenoにさせるためには、コマンドの意味を理解して権限を与えることができる人しか実行できません。これは、さまざまな事故を未然に防ぐ役割があります。<br>
+  - 
+
 
 
 ### 1.2 開発環境のセットアップ
 - Denoのインストール
  公式URLを参考に行ってください
-- VS Code設定とおすすめ拡張機能
+- VSCode設定とおすすめ拡張機能
 
 - 基本的な実行方法
   実行のためのコマンド
