--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -24,33 +24,32 @@ published: false
 ## 第1章: Denoの基礎
 
 ### 1.1 Denoとは - Node.jsとの違いを理解する
-- **Denoの特徴とメリット**<br>
+- **DenoとNode.jsは**<br>
+    > 「Node.jsに関する10の反省点」を修正すべく、Node.jsの開発者でもあるRyan Dahl氏を中心に開発が行われています。<br>
+    Node.jsは現在の開発にはなくてはならない存在です。<br>
+    それだけ使用されているツールの反省点が10個もあること・そしてその反省点を活かしてDenoが開発されていることは根幹に関わることなので認識して触ると触りやすく面白いです。<br>
   - TypeScript標準サポート<br>
     コンパイルをしなくてもTypeScriptが実行できます。設定や追加の手順は、一切不要なので、とっても簡単に扱うことができます。<br>
+    
   - Denoのpermissions<br>
     Denoは、明示的に権限を与えない限り実行することができません。今回の実装内容は、かなり強力なものです。ファイル作成や内容の上書きをDenoにさせるためには、コマンドの意味を理解して権限を与えることができる人しか実行できません。これは、さまざまな事故を未然に防ぐ役割があります。<br>
-  - 
-
-
+    また、npmの脆弱性が増えてきているようです。その結果、サプライチェーン攻撃の標的になったりしています。Denoは、そのような攻撃に強くなっています<br>
 
 ### 1.2 開発環境のセットアップ
 - Denoのインストール
- 公式URLを参考に行ってください
-- VSCode設定とおすすめ拡張機能
-
-- 基本的な実行方法
-  実行のためのコマンド
-  ```javaScript
-  ```
+ 公式こそ正義です。公式URLを参考に行ってください
+ miseでも入れれました。ご自身のお使いのバージョン管理ツールに合った方法をお使いください！
 
 ### 1.3 catコマンドの作成
 - 最初のコマンド作成
   まず、最初のコマンドとして、catコマンドを作成してみましょう！<br>
   Unix cat：https://docs.deno.com/examples/unix_cat/ を検索してください。<br>
   ブラウザに書いてるコードをコピーしてください。<br>
-  お好きなコードエディタで開いたDenoのリポジトリに`cat.ts`を
+  お好きなコードエディタで開いたDenoのリポジトリに`cat.ts`を作成してください。
 - コマンドライン引数の処理
+　
 - 権限システムの理解
+　
 
 ## 第2章: Linuxコマンドの実装
 
