--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -30,22 +30,25 @@ published: false
     それだけ使用されているツールの反省点が10個もあること・そしてその反省点を活かしてDenoが開発されていることは根幹に関わることなので認識して触ると触りやすく面白いです。<br>
   - TypeScript標準サポート<br>
     コンパイルをしなくてもTypeScriptが実行できます。設定や追加の手順は、一切不要なので、とっても簡単に扱うことができます。<br>
-    
+    TypeScriptのキャッチアップに最適な環境と言えると思います。<br>
   - Denoのpermissions<br>
     Denoは、明示的に権限を与えない限り実行することができません。今回の実装内容は、かなり強力なものです。ファイル作成や内容の上書きをDenoにさせるためには、コマンドの意味を理解して権限を与えることができる人しか実行できません。これは、さまざまな事故を未然に防ぐ役割があります。<br>
     また、npmの脆弱性が増えてきているようです。その結果、サプライチェーン攻撃の標的になったりしています。Denoは、そのような攻撃に強くなっています<br>
 
 ### 1.2 開発環境のセットアップ
 - Denoのインストール
- 公式こそ正義です。公式URLを参考に行ってください
- miseでも入れれました。ご自身のお使いのバージョン管理ツールに合った方法をお使いください！
+ 公式こそ正義です。公式URLを参考に行ってください<br>
+ miseでも入れれました。ご自身のお使いのバージョン管理ツールに合った方法をお使いください！<br>
 
 ### 1.3 catコマンドの作成
 - 最初のコマンド作成
   まず、最初のコマンドとして、catコマンドを作成してみましょう！<br>
   Unix cat：https://docs.deno.com/examples/unix_cat/ を検索してください。<br>
   ブラウザに書いてるコードをコピーしてください。<br>
-  お好きなコードエディタで開いたDenoのリポジトリに`cat.ts`を作成してください。
+  お好きなコードエディタで開いたDenoのリポジトリに`cat.ts`を作成して先ほどコピーしてきたコードを貼り付けてください。<br>
+  これで完成です！<br>
+- 実行方法
+
 - コマンドライン引数の処理
 　
 - 権限システムの理解
@@ -89,12 +92,6 @@ published: false
 - クロスプラットフォーム対応
 - システムへのインストール方法
 - PATH設定とエイリアス
-
-### 3.3 実際の運用での注意点
-- セキュリティ権限の適切な設定
-- パフォーマンス考慮事項
-- エラー処理のベストプラクティス
-- ログ出力とトラブルシューティング
 
 ## まとめ
 - Denoでのコマンド開発の利点
