--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -9,7 +9,6 @@ published: false
 # DenoでLinuxコマンドを作ろう
 
 ## はじめに
-**はじめまして**<br>
   れなっちと申します。<br>
   Web系エンジニア歴2年目で、現在はクライアントサイドを中心にTypeScript系を使った開発をしています。<br>
   好きなもの：アニメ・ねこ・ディズニー<br>
@@ -33,26 +32,63 @@ published: false
     TypeScriptのキャッチアップに最適な環境と言えると思います。<br>
   - Denoのpermissions<br>
     Denoは、明示的に権限を与えない限り実行することができません。今回の実装内容は、かなり強力なものです。ファイル作成や内容の上書きをDenoにさせるためには、コマンドの意味を理解して権限を与えることができる人しか実行できません。これは、さまざまな事故を未然に防ぐ役割があります。<br>
-    また、npmの脆弱性が増えてきているようです。その結果、サプライチェーン攻撃の標的になったりしています。Denoは、そのような攻撃に強くなっています<br>
+    また、npmの脆弱性が増えてきているようです。その結果、サプライチェーン攻撃の標的になったりしています<br>Denoは、そのような攻撃に強くなっています<br>
 
 ### 1.2 開発環境のセットアップ
-- Denoのインストール
+- Denoのインストール<br>
  公式こそ正義です。公式URLを参考に行ってください<br>
- miseでも入れれました。ご自身のお使いのバージョン管理ツールに合った方法をお使いください！<br>
+ 私はmiseで入れました。ご自身のお使いのバージョン管理ツールに合った方法をお使いください！<br>
 
 ### 1.3 catコマンドの作成
-- 最初のコマンド作成
-  まず、最初のコマンドとして、catコマンドを作成してみましょう！<br>
-  Unix cat：https://docs.deno.com/examples/unix_cat/ を検索してください。<br>
-  ブラウザに書いてるコードをコピーしてください。<br>
-  お好きなコードエディタで開いたDenoのリポジトリに`cat.ts`を作成して先ほどコピーしてきたコードを貼り付けてください。<br>
-  これで完成です！<br>
+- 最初のコマンド作成<br>
+  1. まず、最初のコマンドとして、catコマンドを作成してみましょう！<br>
+  2. Unix cat：URL(https://docs.deno.com/examples/unix_cat/) を検索してください。<br>
+  3. ブラウザに書いてるコードをコピーしてください。<br>
+  4. お好きなコードエディタで開いたDenoのリポジトリに`cat.ts`を作成して先ほどコピーしてきたコードを貼り付けてください。<br>
+  5. これで完成です！<br>
 - 実行方法
+  ```
+  % deno run cat.ts　cat.ts
+  ```
+  を実行してください。<br>
+  以下の文が出たと思います。<br>
+  ```
+  % deno run cat.ts cat.ts
+  ┏ ⚠️  Deno requests read access to "cat.ts".
+  ┠─ Requested by `Deno.open()` API.
+  ┠─ To see a stack trace for this prompt, set the DENO_TRACE_PERMISSIONS environmental variable.
+  ┠─ Learn more at: https://docs.deno.com/go/--allow-read
+  ┠─ Run again with --allow-read to bypass this prompt.
+  ┗ Allow? [y/n/A] (y = yes, allow; n = no, deny; A = allow all read permissions) >
+  ```
+- 権限システムの理解<br>
+  読み取り権限に許可を求めていることが分かります。<br>
+  これが「1.1　Denoのpermissions」に記述してある内容です。<br>
+  許可を渡すことでスクリプトが実行されます。<br>
+  デフォルトでは、ほとんどのシステムI/Oへのアクセスは拒否されます。<br>
+  ただし、ユーザーがDenoランタイムに明示的に権限を付与することでアクセスをすることができます。<br>
+  許可には、下記表に記載しました。
+  |オプション  |許可内容  |
+  |---|---|
+  |--allow-read  |読み込み許可 |
+  |--allow-write |書き込み許可 |
+  |--allow-net  |ネットワークアクセスを許可 |
+  |--allow-env  |環境変数の取得や設定などの環境アクセスを許可 |
+  |--allow-run  |サブプロセスの実行を許可 |
+  |--allow-all  |全ての許可 |
 
-- コマンドライン引数の処理
-　
-- 権限システムの理解
-　
+- 再度実行<br>
+```
+% Deno run --allow-read cat.ts cat.ts
+
+@@@@@ FsFile {}
+for (const filename of Deno.args) {
+    const file = await Deno.open(filename);
+    console.log("@@@@@", file);
+    await file.readable.pipeTo(Deno.stdout.writable, { preventClose: true });
+}%
+```
+  スクリプトが実行されました。
 
 ## 第2章: Linuxコマンドの実装
 
@@ -60,19 +96,12 @@ published: false
 - ファイル読み込み処理
 - ストリーム処理の実装
 - エラーハンドリング
-- 複数ファイル対応
 
 ### 2.2 テキスト検索コマンド `mygrep` の実装
 - 正規表現での検索機能
 - 行番号表示オプション
 - 複数ファイルでの検索
 - パフォーマンス最適化
-
-### 2.3 システム監視コマンド `mysysinfo` の実装
-- システム情報の取得
-- JSON形式での出力
-- リアルタイム監視機能
-- 外部APIとの連携
 
 ### 2.4 パイプライン対応とオプション処理
 - 標準入力からの読み込み
