ちょっと書いた

--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -88,33 +88,45 @@ for (const filename of Deno.args) {
     await file.readable.pipeTo(Deno.stdout.writable, { preventClose: true });
 }%
 ```
-  スクリプトが実行されました。
+  スクリプトが実行されました！
 
 ## 第2章: Linuxコマンドの実装
 
-### 2.1 ファイル操作コマンド `touch` の実装
-- ファイル読み込み処理
-- ストリーム処理の実装
-- エラーハンドリング
+### 2.1 ファイル操作コマンド `touch` の実装<br>
+実際のコードはGitHubのURLを参考に確認してください。<br>
+https://github.com/kashiwagi-rena/LinuxCommand/blob/main/touch.ts<br>
+- 超個人的なLinuxコマンドの調べ方
+　調べるよりも実際に動かした方が、真似したい挙動になると思い、コツコツ確認していきました。<br>
+  1. IBMの公式を確認。<br>
+  参考URL：https://www.ibm.com/docs/ja/aix/7.1.0?topic=t-touch-command<br>
+  2. 実行して、挙動の確認<br>
+  3. エラー文の確認と自分このコマンドを使う時にどんなエラー文がでたら嬉しいかを検討する。<br>
+　
 
-### 2.2 テキスト検索コマンド `mygrep` の実装
+
+- Denoの標準ライブラリ
+```
+
+```
+参考：https://deno-ja.vercel.app/manual@v1.8.3/standard_library
+
+- エラーハンドリング
+```
+
+```
+
+### 2.2 テキスト検索コマンド `cat_footsteps` の実装
 - 正規表現での検索機能
 - 行番号表示オプション
 - 複数ファイルでの検索
 - パフォーマンス最適化
 
-### 2.4 パイプライン対応とオプション処理
-- 標準入力からの読み込み
-- コマンドラインオプションの解析
-- ヘルプ機能の実装
-
-## 第3章: 品質向上とデプロイメント（約3000字）
+## 第3章: 品質向上とデプロイメント
 
 ### 3.1 テストとデバッグ
 - 単体テストの書き方
 - Deno標準のテスト機能
 - デバッグ手法とツール
-- CI/CDでの自動テスト
 
 ### 3.2 配布可能な実行ファイル作成
 - `deno compile`での単一実行ファイル生成
