--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -12,10 +12,12 @@ published: false
   れなっちと申します。<br>
   Web系エンジニア歴2年目で、現在はクライアントサイドを中心にTypeScript系を使った開発をしています。<br>
   好きなもの：アニメ・ねこ・ディズニー<br>
-**この記事で学べること**<br>
-  Linuxコマンドでの、キャッチアップの仕方<br>
-  Denoの初歩的な書き方<br>
-**対象読者と前提知識**<br>
+  <br>
+### この記事で学べること<br>
+  - Linuxコマンドでの、キャッチアップの仕方<br>
+  - Denoの初歩的な書き方<br>
+  <br>
+### 対象読者と前提知識<br>
   Denoを触ってみたい人<br>
   環境構築を程々にTypeScriptをちょっと書いてみたい方<br>
   TypeScriptのキャッチアップしたい人<br>
@@ -48,21 +50,37 @@ published: false
   5. これで完成です！<br>
 - 実行方法
   ```
-  % deno run cat.ts　cat.ts
+  % deno run cat.ts cat.ts
   ```
   を実行してください。<br>
   以下の文が出たと思います。<br>
+
   ```
-  % deno run cat.ts cat.ts
-  ┏ ⚠️  Deno requests read access to "cat.ts".
-  ┠─ Requested by `Deno.open()` API.
-  ┠─ To see a stack trace for this prompt, set the DENO_TRACE_PERMISSIONS environmental variable.
-  ┠─ Learn more at: https://docs.deno.com/go/--allow-read
-  ┠─ Run again with --allow-read to bypass this prompt.
-  ┗ Allow? [y/n/A] (y = yes, allow; n = no, deny; A = allow all read permissions) >
+  % deno run cat.ts test.ts
+    ┏ ⚠️  Deno requests read access to "test.ts".
+    ┠─ Requested by `Deno.open()` API.
+    ┠─ To see a stack trace for this prompt, set the DENO_TRACE_PERMISSIONS environmental variable.
+    ┠─ Learn more at: https://docs.deno.com/go/--allow-read
+    ┠─ Run again with --allow-read to bypass this prompt.
+    ┗ Allow? [y/n/A] (y = yes, allow; n = no, deny; A = allow all read permissions) >
   ```
+  ターミナルに「n」を入力してみましょう！<br>
+
+  ```
+    % deno run cat.ts test.ts
+      ❌ Denied read access to "test.ts".
+      error: Uncaught (in promise) NotCapable: Requires read access to "test.ts", run again with the --allow-read flag
+        const file = await Deno.open(filename);
+                                ^
+        at Object.open (ext:deno_fs/30_fs.js:541:21)
+        at file:///Users/kashiwagirena/workspace/study/LinuxCommand/cat.ts:6:29
+  ```
+  `Denied read access to "test.ts"`→`「test.ts」への読み取りアクセスが拒否されました`<br>
+  読み取りがどうもできなかったようです？<br>
+  これは、Denoの特徴で、読み取りにも権限を渡さないと読み取ることができないようになってます。<br>
+
 - 権限システムの理解<br>
-  読み取り権限に許可を求めていることが分かります。<br>
+  上記エラーで、読み取り権限に許可を求めていることが分かります。<br>
   これが「1.1　Denoのpermissions」に記述してある内容です。<br>
   許可を渡すことでスクリプトが実行されます。<br>
   デフォルトでは、ほとんどのシステムI/Oへのアクセスは拒否されます。<br>
@@ -77,20 +95,23 @@ published: false
   |--allow-run  |サブプロセスの実行を許可 |
   |--allow-all  |全ての許可 |
 
-- 再度実行<br>
-```
-% Deno run --allow-read cat.ts cat.ts
+  `--allow-all`は、permissionsの意味がなくなってしまうため、おすすめできません。<br>
+  必要な権限を渡してください。<br>
 
-@@@@@ FsFile {}
-for (const filename of Deno.args) {
-    const file = await Deno.open(filename);
-    console.log("@@@@@", file);
-    await file.readable.pipeTo(Deno.stdout.writable, { preventClose: true });
-}%
-```
+- 再度実行<br>
+  ```
+  % Deno run --allow-read cat.ts test.ts
+
+  @@@@@ FsFile {}
+  for (const filename of Deno.args) {
+      const file = await Deno.open(filename);
+      console.log("@@@@@", file);
+      await file.readable.pipeTo(Deno.stdout.writable, { preventClose: true });
+  }%
+  ```
   スクリプトが実行されました！
 
-## 第2章: Linuxコマンドの実装
+## 第2章: Linuxコマンドの実装 
 
 ### 2.1 ファイル操作コマンド `touch` の実装<br>
 実際のコードはGitHubのURLを参考に確認してください。<br>
@@ -101,13 +122,13 @@ https://github.com/kashiwagi-rena/LinuxCommand/blob/main/touch.ts<br>
   参考URL：https://www.ibm.com/docs/ja/aix/7.1.0?topic=t-touch-command<br>
   2. 実行して、挙動の確認<br>
   3. エラー文の確認と自分このコマンドを使う時にどんなエラー文がでたら嬉しいかを検討する。<br>
-　
+  4. わかったことをコードにしていく。<br>
 
+- Denoの標準ライブラリ<br>
+  touchコマンドを作成した際に、
+  ```
 
-- Denoの標準ライブラリ
-```
-
-```
+  ```
 参考：https://deno-ja.vercel.app/manual@v1.8.3/standard_library
 
 - エラーハンドリング
@@ -135,11 +156,4 @@ https://github.com/kashiwagi-rena/LinuxCommand/blob/main/touch.ts<br>
 - PATH設定とエイリアス
 
 ## まとめ
-- Denoでのコマンド開発の利点
-- さらなる学習リソース
-- コミュニティとエコシステム
-
-## 付録
-- 完成したコマンドのソースコード一覧
-- よくあるエラーと対処法
-- 参考リンク集
+- AIにまとめてもらう
