標準ライブラリの記述入力

--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -114,9 +114,9 @@ published: false
 ## 第2章: Linuxコマンドの実装 
 
 ### 2.1 ファイル操作コマンド `touch` の実装<br>
-実際のコードはGitHubのURLを参考に確認してください。<br>
-https://github.com/kashiwagi-rena/LinuxCommand/blob/main/touch.ts<br>
-- 超個人的なLinuxコマンドの調べ方
+  実際のコードはGitHubのURLを参考に確認してください。<br>
+  https://github.com/kashiwagi-rena/LinuxCommand/blob/main/touch.ts<br>
+- 超個人的なLinuxコマンドの調べ方<br>
 　調べるよりも実際に動かした方が、真似したい挙動になると思い、コツコツ確認していきました。<br>
   1. IBMの公式を確認。<br>
   参考URL：https://www.ibm.com/docs/ja/aix/7.1.0?topic=t-touch-command<br>
@@ -124,17 +124,27 @@ https://github.com/kashiwagi-rena/LinuxCommand/blob/main/touch.ts<br>
   3. エラー文の確認と自分このコマンドを使う時にどんなエラー文がでたら嬉しいかを検討する。<br>
   4. わかったことをコードにしていく。<br>
 
-- Denoの標準ライブラリ<br>
-  touchコマンドを作成した際に、
+- Denoの標準ライブラリについて<br>
+  touchコマンドを作成した際に、使用した標準関数を一覧にしました。<br>
+  標準関数多く多機能なため、実装がしやすかったです。<br>
   ```
+  // スクリプトファイルの次に入力された文字列を配列として、標準入力できます。
+  Deno.args[0];
 
+  // パスで参照されるファイルシステムオブジェクトのアクセス時刻（atime）と変更時刻（mtime）を変更します。
+  Deno.utime();
+
+  // ファイルが存在しない場合は作成し、既存のファイルは切り詰めます。Deno.FsFile のインスタンスとして解決されます。
+  Deno.create();
+
+  // 指定されたパスのDeno.FileInfoに解決します。シンボリックリンクは常に追跡します。
+  Deno.stat();
+
+  // オプションの終了コードでDenoプロセスを終了する。
+  // 終了コードが指定されない場合、Denoはリターンコード0で終了します。
+  Deno.exit();
   ```
 参考：https://deno-ja.vercel.app/manual@v1.8.3/standard_library
-
-- エラーハンドリング
-```
-
-```
 
 ### 2.2 テキスト検索コマンド `cat_footsteps` の実装
 - 正規表現での検索機能
