--- a/articles/8377a3c5f2b3fa.md
+++ b/articles/8377a3c5f2b3fa.md
@@ -128,8 +128,8 @@ published: false
   touchコマンドを作成した際に、使用した標準関数を一覧にしました。<br>
   標準関数多く多機能なため、実装がしやすかったです。<br>
   ```
-  // スクリプトファイルの次に入力された文字列を配列として、標準入力できます。
-  Deno.args[0];
+  // スクリプトに渡されたコマンドライン引数（ファイル名以降）が配列に入る。
+  Deno.args[];
 
   // パスで参照されるファイルシステムオブジェクトのアクセス時刻（atime）と変更時刻（mtime）を変更します。
   Deno.utime();
@@ -146,24 +146,134 @@ published: false
   ```
 参考：https://deno-ja.vercel.app/manual@v1.8.3/standard_library
 
-### 2.2 テキスト検索コマンド `cat_footsteps` の実装
-- 正規表現での検索機能
-- 行番号表示オプション
-- 複数ファイルでの検索
-- パフォーマンス最適化
+### 2.2 catRunコマンド cat_footsteps の実装
+- 実装方法<br>
+実際のコードはGitHubのURLを参考に確認してください。<br>
+https://github.com/kashiwagi-rena/LinuxCommand/blob/main/cat_footsteps.ts
+
+- 書いてあるコードの説明<br>
+概要: ターミナル全体を使って、猫のアスキーアートが左右に歩き、後ろに足跡が残って徐々に薄れて消えるアニメーションを表示します。
+
+- 主要定数<br>
+ANSI: 画面クリア、カーソル移動/表示切替、色リセットや色指定（黄色・灰色・白）などのANSIエスケープコードを定義。<br>
+CAT_FRAMES: 猫のアスキーアート2フレーム（左足・右足）を配列で保持し、交互に切り替えて歩行表現。<br>
+FOOTPRINTS: 足跡として使うシンボルの候補（例: 🐾, ·, •）。<br>
+
+- 型定義<br>
+Position: x, y座標。<br>
+Footprint: Positionにsymbol（シンボル）とage（経過フレーム数）を加えた足跡の型。<br>
+クラス CatWalkAnimation<br>
+フィールド: 画面のwidth/height、猫の位置catPos、現在のフレームframeIndex、足跡配列footprints、進行方向direction（1:右、-1:左）。<br>
+constructor(): Deno.consoleSize()からターミナルサイズを取得（なければ80x24にフォールバック）し、猫の初期位置を決定。<br>
+initScreen(): 画面クリアとカーソル非表示。<br>
+cleanup(): カーソル表示を戻して色をリセット。<br>
+updateCatPosition(): 猫のx位置を方向に応じて更新し、左右の端に近づいたらdirectionを反転。frameIndexを交互に更新して歩行アニメーション。<br>
+addFootprint(): 現在のフレーム（左足/右足）に応じて足跡の位置を決め、FOOTPRINTSからランダムにシンボルを選んでfootprintsに追加。要素が多くなり過ぎないよう古いものを間引き。<br>
+ageFootprints(): 各足跡のageをインクリメントし、一定フレーム（15）を超えた古い足跡を削除。<br>
+render(): 2次元バッファを作って、足跡と猫を色付きで描画。足跡は若いほど白、古くなると灰色で表現。最後にカーソルを左上へ戻し、バッファを画面へ出力。<br>
+start(): 無限ループで「位置更新→足跡追加→経年処理→描画」を実行し、120msスリープで約8FPSに。例外や中断時はcleanup()で後始末。<br>
+- エントリポイント<br>
+main(): SIGINT（Ctrl+C）で終了するシグナルハンドラを登録し、CatWalkAnimationを開始。<br>
+if (import.meta.main): スクリプトが直接実行されたときだけmain()を呼び、モジュールとしてインポートされた場合はアニメーションを開始しない構造。<br>
+
+- 実行方法<br>
+例: deno run cat_footsteps.ts<br>
+カーソルが非表示になり、猫と足跡のアニメーションが始まります。Ctrl+Cで安全に終了できます。<br>
+
+- 補足<br>
+足跡のシンボルはランダム選択され、古くなると色が薄く見えるように演出。<br>
+パフォーマンスのため、足跡配列のサイズを適度に抑制。ターミナルサイズが取得できない環境でもデフォルト値で動作します。<br>
 
 ## 第3章: 品質向上とデプロイメント
-
 ### 3.1 テストとデバッグ
-- 単体テストの書き方
-- Deno標準のテスト機能
-- デバッグ手法とツール
+- 単体テストの書き方<br>
+目的: cat_footsteps.ts が import 時に副作用で main を実行しないことを保証します。console.log を差し替えて出力を捕捉し、ゼロであることを検証します。<br>
 
-### 3.2 配布可能な実行ファイル作成
-- `deno compile`での単一実行ファイル生成
-- クロスプラットフォーム対応
-- システムへのインストール方法
-- PATH設定とエイリアス
+テスト本体:
+```
+import { assertEquals, assertStringIncludes } from "@std/assert";
+
+Deno.test("cat_footsteps: import does not trigger main", async () => {
+  const originalLog = console.log;
+  const captured: string[] = [];
+  console.log = (...args: unknown[]) => {
+    captured.push(args.map(String).join(" "));
+  };
+  try {
+    await import("./cat_footsteps.ts");
+  } finally {
+    console.log = originalLog;
+  }
+  assertEquals(captured.length, 0);
+});
+```
+実行方法:
+
+```
+deno test
+```
+
+Deno標準のテスト機能<br>
+無視フラグとサニタイズ制御: 統合スモーク（外部プロセス生成）を ignore: true で通常はスキップ。<br>
+sanitizeResources/sanitizeOps を無効化し、サブプロセス・ストリーム未解放での誤検出を防ぎます。<br>
+プロセス生成とシグナル: Deno.Command で cat_footsteps.ts を -A で起動し、短時間後に SIGINT を送って終了メッセージの一部を検証します。<br>
+
+```
+// 実行例（無視設定）：サブプロセスで起動しSIGINTで終了させるスモークテスト
+// 注意: 実行には `deno test --allow-run` 権限が必要で、TTY非依存では失敗する場合があります。
+Deno.test({
+  name: "cat_footsteps: integration smoke (spawn and SIGINT) [ignored]",
+  ignore: true,
+  sanitizeResources: false,
+  sanitizeOps: false,
+  fn: async () => {
+    const child = new Deno.Command(Deno.execPath(), {
+      args: [
+        "run",
+        "-A",
+        "./cat_footsteps.ts",
+      ],
+      stdout: "piped",
+      stderr: "piped",
+    }).spawn();
+
+    const reader = child.stdout.getReader();
+    const decoder = new TextDecoder();
+    let output = "";
+
+    const readLoop = (async () => {
+      while (true) {
+        const { value, done } = await reader.read();
+        if (done) break;
+        if (value) output += decoder.decode(value);
+      }
+    })();
+
+    await new Promise((r) => setTimeout(r, 400));
+    try {
+      child.kill("SIGINT");
+    } catch (_) {
+      // ignore
+    }
+    await readLoop;
+    assertStringIncludes(output, "猫の足跡アニメーション");
+  },
+});
+```
 
 ## まとめ
-- AIにまとめてもらう
+  本記事では、DenoでLinuxコマンド風のツールを作る流れを、基礎から実装・テストまで一通り紹介しました。ポイントは次のとおりです。<br>
+  <br>
+  - Denoの概要と特徴<br>
+    TypeScriptを標準サポートし、デフォルト拒否のpermissionsモデルで安全に実行。必要最小限の権限（例: `--allow-read`）のみ付与するのが基本。<br>
+  - サンプルで学ぶpermissions<br>
+    `cat.ts`の実行を通じて、権限未付与だとI/Oが拒否されること、権限付与後に動作することを体験。<br>
+  - `touch`の実装で触れた主要API<br>
+    `Deno.args`, `Deno.utime`, `Deno.create`, `Deno.stat`, `Deno.exit` など標準APIで、実用的なファイル操作コマンドを実装。<br>
+  - ターミナルアニメ「cat_footsteps」<br>
+    ANSIエスケープで画面制御し、猫の歩行と足跡のフェードを描画。クラス設計とループ更新で分かりやすく拡張しやすい構造に。<br>
+  - テストと品質<br>
+    import時に副作用を起こさない単体テスト、`Deno.Command`を使ったスモークテストの考え方を紹介。<br>
+  <br>
+  まずは公式ドキュメントを起点に、小さく動かして振る舞いを観察し、必要な権限だけを与える—この流れで学ぶと、DenoとLinuxコマンドの両方を楽しくキャッチアップできます。<br>
+
