「はじめに」荒削り

--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -7,13 +7,29 @@ published: false
 ---
 
 # Lambda の同時実行制御で防ぐ、アクセス集中時の障害対策
+# 「なんで、Lambdaでサーバー立ててるの？」仕事で使用している技術をちゃんと深掘りしてみた!
 
 この記事は、「なんで、Lambdaでサーバー立ててるの？」と聞かれた私が返答として出した答えの記事です。
-自分の仕事で使用している技術
+自分の仕事で使用している技術は上司が決めることがまだ多い中、なんでこの技術やサービスを選択されたかを自分の言葉で説明できるようになりたい〜
 
 ### 1. はじめに
-- 突発的なアクセス増加による障害の経験
-- Lambda を選んだ理由
+**アクセス増加による障害の経験**
+皆さんは、自分の好きなアーティストやアイドルのチケット戦争をしたことがありますか？
+私は、あります！
+その際に、サーバーが耐えられず落ちたことはありますか？
+私は、あります！
+
+そんな、瞬発的にアクセス数が多くなるサイトを現在作っています。
+
+**Lambda を選んだ理由**
+「EC2など他のサービスでも自動的にサーバーを増やしてくれるし、そっちでもいいんじゃない？」
+「前もってコンテナ増やしていたらいいじゃん！」
+確かに、EC2にはそのような機能があります。
+その日だけコンテナ増やすこともできますし、やっておられたそうです。
+・・・が、それだけじゃ間に合わない！コンテナ増やしてもそれをゆうに超えていくアクセス数・・・
+そして、0時ごろに落ちるサーバー
+泣き泣き対応するエンジニア
+みたいなことが起こり、Lambdaが採用されました！
 
 ### 2. Lambda と EC2 の違い
 - スケーリングの仕組みの比較
