--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -1,8 +1,8 @@
 ---
-title: ""
+title: "導入記事"
 emoji: "🐈ྀི"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["ESLint", "", ""]
+topics: ["ESLint", "Prettier", "Vue3", "Nuxt4"]
 published: false
 ---
 
