改行の確認

--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -25,9 +25,22 @@ published: false
 
 
 ### 2. ESLintとPrettierの役割の違い
-- ESLint：コード品質とバグ検出
+- ESLint：
+    > 設定可能なJavaScriptリンター
+    > JavaScriptコード内の問題を発見し、修正するのに役立ちます。
+
+    JS：
+
+  - Linter：
+        > ソースコードに対して一連のルールを実行した結果を報告できる静的解析ツール。各ルールは、ソースコード内の任意の数の違反を報告できます。
+
+    [ESLint公式](https://eslint.org/)
 - Prettier：コードフォーマット
+    >
+    prettier公式
+
 - なぜ両方必要なのか
+
 
 ---
 
