マークダウンの書き方チェック

--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -6,7 +6,7 @@ topics: ["ESLint", "Prettier", "Vue3", "Nuxt4"]
 published: false
 ---
 
-# Vue3/Nuxt4でのESLint・Prettier導入記事 目次
+# 
 
 ## 第1部：基礎知識編
 
@@ -25,21 +25,25 @@ published: false
 
 
 ### 2. ESLintとPrettierの役割の違い
-- ESLint：
+**ESLint**：
     > 設定可能なJavaScriptリンター
     > JavaScriptコード内の問題を発見し、修正するのに役立ちます。
 
-    JS：
-
-  - Linter：
-        > ソースコードに対して一連のルールを実行した結果を報告できる静的解析ツール。各ルールは、ソースコード内の任意の数の違反を報告できます。
-
+    
+    
     [ESLint公式](https://eslint.org/)
-- Prettier：コードフォーマット
+
+:::details Linter
+> ソースコードに対して一連のルールを実行した結果を報告できる静的解析ツール。各ルールは、ソースコード内の任意の数の違反を報告できます。
+[ESLint公式　Linter](https://eslint.org/docs/latest/use/core-concepts/glossary#linter)
+:::
+
+**Prettier**：
     >
     prettier公式
 
 - なぜ両方必要なのか
+
 
 
 ---
