--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -25,16 +25,24 @@ published: false
 
 
 ### 2. ESLintとPrettierの役割の違い
-**ESLint**：
-    > 設定可能なJavaScriptリンター
-    > JavaScriptコード内の問題を発見し、修正するのに役立ちます。
+**ESLintとは**：
+> 設定可能なJavaScriptリンター
+> JavaScriptコード内の問題を発見し、修正するのに役立ちます。
 
-    
-    
-    [ESLint公式](https://eslint.org/)
+コードの一貫性を維持するための静的解析ツール。
+単純な構文エラーやコーディング規約から外れたコードを指摘。
+
+[ESLint公式](https://eslint.org/)
+[ESLint Module](https://eslint.nuxt.com/packages/module)
+
+Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公式に書いてあります。
+プロジェクト対応のNuxt固有の設定もあります。
+
+[Code Style](https://nuxt.com/docs/4.x/guide/concepts/code-style)
 
 :::details Linter
 > ソースコードに対して一連のルールを実行した結果を報告できる静的解析ツール。各ルールは、ソースコード内の任意の数の違反を報告できます。
+
 [ESLint公式　Linter](https://eslint.org/docs/latest/use/core-concepts/glossary#linter)
 :::
 
