1部下書き完了

--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -29,8 +29,7 @@ published: false
 > 設定可能なJavaScriptリンター
 > JavaScriptコード内の問題を発見し、修正するのに役立ちます。
 
-コードの一貫性を維持するための静的解析ツール。
-単純な構文エラーやコーディング規約から外れたコードを指摘。
+コードの一貫性を維持するための静的解析ツールで、単純な構文エラーやコーディング規約から外れたコードを指摘してくれます。
 
 [ESLint公式](https://eslint.org/)
 [ESLint Module](https://eslint.nuxt.com/packages/module)
@@ -46,12 +45,24 @@ Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公
 [ESLint公式　Linter](https://eslint.org/docs/latest/use/core-concepts/glossary#linter)
 :::
 
-**Prettier**：
-    >
-    prettier公式
+**Prettierとは**：
+>　An opinionated code formatter
+
+[prettier公式](https://prettier.io/)
+
+コードフォーマッターです。コードを自動的に整形してくれるツールです。
+コードを書いている際に整形する手間と時間を節約して、一貫したスタイルでコードを整えてくれます。
+
+:::details フォーマッター
+> 開発者がプログラミング言語で記述したソースコードを、一定のルールに従って整形してくれるもの
+
+[フォーマッター](https://e-words.jp/w/%E3%83%95%E3%82%A9%E3%83%BC%E3%83%9E%E3%83%83%E3%82%BF%E3%83%BC.html)
+:::
+
 
 - なぜ両方必要なのか
-
+    両者とも「コードの綺麗さ・一貫性」を保ってくれるツールです。
+    上記の説明にもあるように、確認観点の違いがあり、２つ使うことが多い印象です。
 
 
 ---
