--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -8,8 +8,6 @@ published: false
 
 # 
 
-## 第1部：基礎知識編
-
 ### 1. はじめに
 この記事は、[TechBull Advent Calendar 2025](https://adventar.org/calendars/11900) の19日目の記事です。
 - 本記事で扱う内容
@@ -24,8 +22,8 @@ published: false
     Prettier：　3系
 
 
-### 2. ESLintとPrettierの役割の違い
-**ESLintとは**：
+## 2. ESLintとPrettierの役割の違い
+### ESLintとは
 > 設定可能なJavaScriptリンター
 > JavaScriptコード内の問題を発見し、修正するのに役立ちます。
 
@@ -45,7 +43,7 @@ Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公
 [ESLint公式　Linter](https://eslint.org/docs/latest/use/core-concepts/glossary#linter)
 :::
 
-**Prettierとは**：
+### Prettierとは
 >　An opinionated code formatter
 
 [prettier公式](https://prettier.io/)
@@ -60,7 +58,7 @@ Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公
 :::
 
 
-- なぜ両方必要なのか
+### なぜ両方必要なのか
     両者とも「コードの綺麗さ・一貫性」を保ってくれるツールです。
     上記の説明にもあるように、確認観点の違いがあり、２つ使うことが多い印象です。
 
