--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -9,69 +9,89 @@ published: false
 # 
 
 ### 1. はじめに
-この記事は、[TechBull Advent Calendar 2025](https://adventar.org/calendars/11900) の19日目の記事です。
-- 本記事で扱う内容
-    Vue3/Nuxt4のアプリケーションにESLintとPrettierを設定した際の備忘録です。
-    誰かのお役にたてれれば幸いです。
-- 対象読者
-    はじめてESLint・Prettierを導入する人
-- 使用環境
-    Vue：　3.5
-    Nuxt：　4.0
-    ESLint：　9系
-    Prettier：　3系
 
+この記事は、[TechBull Advent Calendar 2025](https://adventar.org/calendars/11900) の19日目の記事です。
+
+- **本記事で扱う内容**
+    - Vue3/Nuxt4のアプリケーションにESLintとPrettierを設定した際の備忘録です
+    - 誰かのお役に立てれば幸いです
+
+- **対象読者**
+    - はじめてESLint・Prettierを導入する人
+    - ESLintとPrettierのコンフリクトに悩んでいる人
+    - ESLint 9系の新しい設定形式を知りたい人
+
+- **使用環境**
+    - Vue: 3.5
+    - Nuxt: 4.0
+    - ESLint: 9系（検証時: 9.25.1）
+    - Prettier: 3系（検証時: 3.6.2）
 
 ## 2. ESLintとPrettierの役割の違い
+
 ### ESLintとは
-> 設定可能なJavaScriptリンター
+
+> 設定可能なJavaScriptリンター  
 > JavaScriptコード内の問題を発見し、修正するのに役立ちます。
+> 
+> 出典: [ESLint公式](https://eslint.org/)
 
 コードの一貫性を維持するための静的解析ツールで、単純な構文エラーやコーディング規約から外れたコードを指摘してくれます。
 
-[ESLint公式](https://eslint.org/)
-[ESLint Module](https://eslint.nuxt.com/packages/module)
+**参考リンク：**
+- [ESLint公式](https://eslint.org/)
+- [ESLint Module](https://eslint.nuxt.com/packages/module)
+- [Nuxt Code Style](https://nuxt.com/docs/4.x/guide/concepts/code-style)
 
 Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公式に書いてあります。
 プロジェクト対応のNuxt固有の設定もあります。
 
-[Code Style](https://nuxt.com/docs/4.x/guide/concepts/code-style)
-
-:::details Linter
+:::details 補足：Linterとは
 > ソースコードに対して一連のルールを実行した結果を報告できる静的解析ツール。各ルールは、ソースコード内の任意の数の違反を報告できます。
-
-[ESLint公式　Linter](https://eslint.org/docs/latest/use/core-concepts/glossary#linter)
+> 
+> 出典: [ESLint公式　Linter](https://eslint.org/docs/latest/use/core-concepts/glossary#linter)
 :::
 
-### Prettierとは
->　An opinionated code formatter
+---
 
-[prettier公式](https://prettier.io/)
+### Prettierとは
+
+> An opinionated code formatter
+> 
+> 出典: [Prettier公式](https://prettier.io/)
 
 コードフォーマッターです。コードを自動的に整形してくれるツールです。
 コードを書いている際に整形する手間と時間を節約して、一貫したスタイルでコードを整えてくれます。
 
-:::details フォーマッター
+:::details 補足：フォーマッターとは
 > 開発者がプログラミング言語で記述したソースコードを、一定のルールに従って整形してくれるもの
-
-[フォーマッター](https://e-words.jp/w/%E3%83%95%E3%82%A9%E3%83%BC%E3%83%9E%E3%83%83%E3%82%BF%E3%83%BC.html)
+> 
+> 出典: [フォーマッター](https://e-words.jp/w/%E3%83%95%E3%82%A9%E3%83%BC%E3%83%9E%E3%83%83%E3%82%BF%E3%83%BC.html)
 :::
-
-
-### なぜ両方必要なのか
-    両者とも「コードの綺麗さ・一貫性」を保ってくれるツールです。
-    上記の説明にもあるように、確認観点の違いがあり、２つ使うことが多い印象です。
-
 
 ---
 
-## 第2部：ESLint 9系の変更点
+### なぜ両方必要なのか
 
-### 3. ESLint 9系の設定ファイル変更について
-- 従来の`.eslintrc.js`から`eslint.config.js`への移行
-- Flat Config形式の特徴
+両者とも「コードの綺麗さ・一貫性」を保ってくれるツールです。
+上記の説明にもあるように、確認観点の違いがあります。
+
+**役割の違い：**
+
+| ツール | 主な役割 |
+|--------|----------|
+| **ESLint** | コード品質・バグ検出（構文エラー、コーディング規約違反など） |
+| **Prettier** | コードスタイルの統一（インデント、改行、スペースなど） |
+
+この役割の違いから、２つを併用することで、より高品質で統一されたコードベースを維持できます。
+---
+
+## 3. ESLint 9系の設定ファイル変更について
 - Nuxt4での推奨設定方法
-- マイグレーション時の注意点
+公式のサポートがあるため、公式を[参考](https://nuxt.com/docs/4.x/guide/concepts/code-style#quick-setup)にしインストールしてください。
+- 従来の`.eslintrc.js`から`eslint.config.js`への移行
+
+- Flat Config形式の特徴
 
 ---
 
@@ -114,11 +134,6 @@ Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公
 - 実際の設定ファイル全文
 - 各設定項目の解説
 - プロジェクトに応じたカスタマイズポイント
-
-### 9. CI/CDでの活用
-- pre-commitフックの設定（husky + lint-staged）
-- GitHub Actionsでの自動チェック例
-- **セキュリティ観点：リントエラーをCIで必ず検出する重要性**
 
 ### 10. トラブルシューティング
 - よくあるエラーとその解決法
