--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -43,9 +43,6 @@ published: false
 - [ESLint Module](https://eslint.nuxt.com/packages/module)
 - [Nuxt Code Style](https://nuxt.com/docs/4.x/guide/concepts/code-style)
 
-Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公式に書いてあります。
-プロジェクト対応のNuxt固有の設定もあります。
-
 :::details 補足：Linterとは
 > ソースコードに対して一連のルールを実行した結果を報告できる静的解析ツール。各ルールは、ソースコード内の任意の数の違反を報告できます。
 > 
@@ -84,6 +81,7 @@ Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公
 | **Prettier** | コードスタイルの統一（インデント、改行、スペースなど） |
 
 この役割の違いから、２つを併用することで、より高品質で統一されたコードベースを維持できます。
+
 ---
 
 ## 3. ESLint 9系の設定ファイル変更について
@@ -137,9 +135,69 @@ export default [
 ---
 
 ## 4. 導入手順
-- Prettierの基本設定
 
-- エディタ（VS Code等）の設定
+### ESLintの導入
+
+Nuxtが標準サポートのリンターです。導入・設定方法もNuxt公式に書いてあります。
+プロジェクト対応のNuxt固有の設定もあります。
+以下公式を参考に導入してください。
+
+```bash
+# @nuxt/eslintモジュールをプロジェクトに追加します。
+npx nuxi module add eslint
+
+# TypeScriptの型定義をインストールします.
+npm install -D typescript
+```
+
+コマンド実行後、プロジェクトルート直下に`eslint.config.mjs`ファイルが自動生成されます。
+
+**参考リンク：**
+- [ESLint Module](https://eslint.nuxt.com/packages/module)
+- [Nuxt Code Style](https://nuxt.com/docs/4.x/guide/concepts/code-style)
+
+### Prettierの導入
+
+インストール方法は、以下の公式を参照してください。
+
+**参考リンク：**
+[Prettier Install](https://prettier.io/docs/install)
+
+```bash
+# Prettierのインストール
+npm install --save-dev --save-exact prettier
+
+# 空の設定ファイルを作成
+node --eval "fs.writeFileSync('.prettierrc','{}\n')"
+
+# フォーマットしないファイルを指定するための.prettierignoreファイルを作成
+node --eval "fs.writeFileSync('.prettierignore','# Ignore artifacts:\nbuild\ncoverage\n')"
+
+# プロジェクト全体をフォーマット
+npx prettier . --write
+
+# フォーマットされているかの確認
+npx prettier . --check
+```
+
+**コマンドの説明：**
+- `--write`: ファイルを実際にフォーマットする
+- `--check`: フォーマットが必要なファイルをチェックするのみ
+
+
+### エディタ（VS Code）の設定
+
+VS Codeを使用している場合、以下の拡張機能をインストールすると開発がより便利になります。
+
+**推奨する拡張機能：**
+- [ESLint](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint)
+- [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode)
+
+保存時の自動フォーマット設定などは、各自の環境に合わせて設定してください。
+
+**参考リンク：**
+- [Prettier - Editor Integration](https://prettier.io/docs/editors)
+
 
 ## 5. デフォルト設定でのコンフリクト問題
 - **自己終了タグ（Self-Closing Tags）のコンフリクト**
@@ -166,8 +224,33 @@ export default [
 
 ### 8. 推奨する最終設定
 - 実際の設定ファイル全文
+```
+// @ts-check
+import withNuxt from "./.nuxt/eslint.config.mjs";
+
+export default withNuxt({
+  rules: {
+    camelcase: ["warn", { properties: "never" }],
+    "vue/html-self-closing": [
+      "warn",
+      {
+        html: {
+          void: "always",
+          normal: "always",
+          component: "always",
+        },
+        svg: "always",
+        math: "always",
+      },
+    ],
+  },
+});
+```
 - 各設定項目の解説
+
 - プロジェクトに応じたカスタマイズポイント
+
+
 
 ### 10. まとめ
 - 導入によって得られたメリット
