--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -209,7 +209,7 @@ ESLintの[vue/html-self-closing](https://eslint.vuejs.org/rules/html-self-closin
 
 > 自己終了はシンプルで短いですが、HTML 仕様ではサポートされていません。
 
-![自己終了タグ](esLint.png)
+![自己終了タグ](/images/esLint.png)
 
 - Prettierのデフォルト：`<Component></Component>`に変換
 
