--- a/articles/300d64bc74280b.md
+++ b/articles/300d64bc74280b.md
@@ -3,7 +3,7 @@ title: "Vue3/Nuxt4でのESLint・Prettier導入とコンフリクト解決"
 emoji: "🐈ྀི"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["ESLint", "Prettier", "Vue3", "Nuxt4"]
-published: false
+published: true
 ---
 
 # 
